==> ldavicoclases/sapi_stm32f4/sapi/src/sapi_gpio.c <==
#include "sapi_gpio.h"
#include "stm32f4xx_hal.h"

bool_t gpioConfig( gpioMap_t pin, gpioConfig_t config ){
   GPIO_InitTypeDef GPIO_InitStruct;

   bool_t ret_val     = 1;

   GPIO_TypeDef * gpioPort = gpioPinsConfig[pin].gpio.port;
   uint16_t gpioPin        = gpioPinsConfig[pin].gpio.pin;
   int8_t mode             = gpioPinsConfig[pin].mode;
   int8_t pull             = gpioPinsConfig[pin].pull;
   int8_t speed            = gpioPinsConfig[pin].speed;
   int8_t alternate        = gpioPinsConfig[pin].alternate;

   switch(config){
      case GPIO_INPUT:
         GPIO_InitStruct.Pin = gpioPin;
         GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
         GPIO_InitStruct.Pull = GPIO_NOPULL;
         GPIO_InitStruct.Alternate = 0;
         HAL_GPIO_Init( gpioPort, &GPIO_InitStruct);
      break;

      case GPIO_INPUT_PULLUP:
         GPIO_InitStruct.Pin = gpioPin;
         GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
         GPIO_InitStruct.Pull = GPIO_PULLUP;
         GPIO_InitStruct.Alternate = 0;
         HAL_GPIO_Init( gpioPort, &GPIO_InitStruct);
      break;

      case GPIO_INPUT_PULLDOWN:
         GPIO_InitStruct.Pin = gpioPin;
         GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
         GPIO_InitStruct.Pull = GPIO_PULLDOWN;
         GPIO_InitStruct.Alternate = 0;
         HAL_GPIO_Init( gpioPort, &GPIO_InitStruct);
      break;

      case GPIO_INPUT_PULLUP_PULLDOWN:
         GPIO_InitStruct.Pin = gpioPin;
         GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
         GPIO_InitStruct.Pull = GPIO_PULLDOWN | GPIO_PULLUP;
         GPIO_InitStruct.Alternate = 0;
         HAL_GPIO_Init( gpioPort, &GPIO_InitStruct);
      break;

      case GPIO_OUTPUT:
         GPIO_InitStruct.Pin = gpioPin;
         GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
         GPIO_InitStruct.Pull = GPIO_NOPULL;
         GPIO_InitStruct.Alternate = 0;
         HAL_GPIO_Init( gpioPort, &GPIO_InitStruct);
      break;

      case GPIO_ALT_FUNCTION:
         GPIO_InitStruct.Pin = gpioPin;
         GPIO_InitStruct.Mode = mode;
         GPIO_InitStruct.Pull = pull;
         GPIO_InitStruct.Speed = speed;
         GPIO_InitStruct.Alternate = alternate;
         HAL_GPIO_Init( gpioPort, &GPIO_InitStruct);
	  break;

      default:
         ret_val = 0;
      break;
   }

   return ret_val;

}

bool_t gpioWrite( gpioMap_t pin, bool_t value ){

   GPIO_TypeDef * gpioPort = gpioPinsConfig[pin].gpio.port;
   uint16_t gpioPin        = gpioPinsConfig[pin].gpio.pin;

   HAL_GPIO_WritePin(gpioPort, gpioPin, value);

   return TRUE;
}

bool_t gpioRead( gpioMap_t pin ){

   GPIO_TypeDef * gpioPort = gpioPinsConfig[pin].gpio.port;
   uint16_t gpioPin        = gpioPinsConfig[pin].gpio.pin;

   return HAL_GPIO_ReadPin(gpioPort, gpioPin);
}
